Sat Dec 24 06:59:49 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/readline/test_readline.rb (test_line_buffer__point): use
	  lambda not to exit entire method by "return".  or "next" for
	  proc.  [ruby-dev:45042] [Bug #5802]

Sat Dec 24 01:20:39 2011  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm_eval.c (send_internal): PASS_PASSED_BLOCK_TH must be placed
	  just before calling rb_call0.

	* bootstraptest/test_flow.rb: add a test for above.

Sat Dec 24 00:55:16 2011  Tanaka Akira  <akr@fsij.org>

	* lib/tempfile.rb (Tempfile#initialize): warn if a block is given.

Fri Dec 23 16:14:30 2011  TAKAO Kouji  <kouji@takao7.net>

	* ext/readline/readline.c (readline_attempted_completion_function):
	  in Readline module with GNU Readline 6 case, Readline module
	  resets completion_append_character to " ", after it executes
	  completion. So, Readline module stores
	  completion_append_character, and Readline module always sets it
	  after Readline module executes completion. [ruby-dev:43456]
	  [Feature #4635]

Fri Dec 23 15:59:05 2011  TAKAO Kouji  <kouji@takao7.net>

	* ext/readline/readline.c (Init_readline): libedit check
	  rl_getc_function only when rl_initialize() is called, and
	  using_history() call rl_initialize(). This assignment should be
	  placed before using_history(). [ruby-core:40641] [Bug #5539]

Fri Dec 23 10:14:47 2011  Tanaka Akira  <akr@fsij.org>

	* test/thread/test_queue.rb (test_thr_kill): show the number of loop
	  run when the test failed.

Fri Dec 23 09:23:48 2011  Tanaka Akira  <akr@fsij.org>

	* test/test_pty.rb (test_pty_check_default): call PTY.check until
	  "cat" command is finished.

Fri Dec 23 06:03:00 2011  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* common.mk: add "check succeeded" message.

	* README, README.ja: follow above change.

Fri Dec 23 06:00:39 2011  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* ext/bigdecimal/bigdecimal.h: add satisfy cc-mode comment.
	* util.c: ditto.
